[package]
name = "wt"
version = "0.1.0"
edition = "2021"
description = "Does a thing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
clap_derive = "4.5.4"
gix = "0.63.0"
inquire = "0.7.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-tree = "0.3.1"

[dev-dependencies]
tempfile = "3.10.1"
